build-logs-failed/build-hourglass-0.2.12.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - hourglass-0.2.12 (lib) (first run)
 - hourglass-0.2.12 (test:test-hourglass) (first run)
Configuring library for hourglass-0.2.12...
Preprocessing library for hourglass-0.2.12...
Building library for hourglass-0.2.12...
[ 1 of 17] Compiling Data.Hourglass.Utils
[ 2 of 17] Compiling Data.Hourglass.Zone
[ 3 of 17] Compiling Time.Types
[ 4 of 17] Compiling Data.Hourglass.Types
[ 5 of 17] Compiling Data.Hourglass.Internal.Unix

Data/Hourglass/Internal/Unix.hs:24:1: warning: [-Wunused-imports]
    The import of ‘Control.Applicative’ is redundant
      except perhaps to import instances from ‘Control.Applicative’
    To import instances alone, use: import Control.Applicative()
   |
24 | import Control.Applicative
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
[ 6 of 17] Compiling Data.Hourglass.Internal
[ 7 of 17] Compiling Data.Hourglass.Calendar
[ 8 of 17] Compiling Data.Hourglass.Diff

Data/Hourglass/Diff.hs:23:1: warning: [-Wunused-imports]
    The import of ‘Data.Monoid’ is redundant
      except perhaps to import instances from ‘Data.Monoid’
    To import instances alone, use: import Data.Monoid()
   |
23 | import Data.Monoid
   | ^^^^^^^^^^^^^^^^^^

Data/Hourglass/Diff.hs:49:5: warning: [-Wnoncanonical-monoid-instances]
    Noncanonical ‘mappend’ definition detected
    in the instance declaration for ‘Monoid Period’.
    ‘mappend’ will eventually be removed in favour of ‘(<>)’
    Either remove definition for ‘mappend’ (recommended) or define as ‘mappend = (<>)’
    See also: https://gitlab.haskell.org/ghc/ghc/-/wikis/proposal/semigroup-monoid
   |
49 |     mappend (Period y1 m1 d1) (Period y2 m2 d2) =
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

Data/Hourglass/Diff.hs:70:5: warning: [-Wnoncanonical-monoid-instances]
    Noncanonical ‘mappend’ definition detected
    in the instance declaration for ‘Monoid Duration’.
    ‘mappend’ will eventually be removed in favour of ‘(<>)’
    Either remove definition for ‘mappend’ (recommended) or define as ‘mappend = (<>)’
    See also: https://gitlab.haskell.org/ghc/ghc/-/wikis/proposal/semigroup-monoid
   |
70 |     mappend (Duration h1 m1 s1 ns1) (Duration h2 m2 s2 ns2) =
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
[ 9 of 17] Compiling Data.Hourglass.Time
[10 of 17] Compiling Data.Hourglass.Epoch
[11 of 17] Compiling Data.Hourglass.Local
[12 of 17] Compiling Time.System

Time/System.hs:23:1: warning: [-Wunused-imports]
    The import of ‘Control.Applicative’ is redundant
      except perhaps to import instances from ‘Control.Applicative’
    To import instances alone, use: import Control.Applicative()
   |
23 | import Control.Applicative
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
[13 of 17] Compiling System.Hourglass
[14 of 17] Compiling Data.Hourglass.Format
[15 of 17] Compiling Data.Hourglass
[16 of 17] Compiling Time.Compat
[17 of 17] Compiling Data.Hourglass.Compat
Configuring test suite 'test-hourglass' for hourglass-0.2.12...
Preprocessing test suite 'test-hourglass' for hourglass-0.2.12...
Building test suite 'test-hourglass' for hourglass-0.2.12...

<no location info>: warning: [GHC-32850] [-Wmissing-home-modules]
    These modules are needed for compilation but not listed in your .cabal file's other-modules for ‘hourglass-0.2.12-inplace-test-hourglass’ :
        TimeDB
[1 of 2] Compiling TimeDB
[2 of 2] Compiling Main

tests/Tests.hs:213:24: error: [GHC-76037]
    Not in scope: ‘T.parseTime’
    NB: neither ‘System.Locale’, ‘Data.Time.Calendar’,
                ‘Data.Time.Clock’,
                ‘Data.Time.Clock.POSIX’ nor ‘Data.Time.Format’ export ‘parseTime’.
    Suggested fix:
      Perhaps use ‘T.parseTimeM’ (imported from Data.Time.Format)
    |
213 |                 md2  = T.parseTime T.defaultTimeLocale fmt "%F"
    |                        ^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build test:test-hourglass from hourglass-0.2.12.

